# full_project

./: pyproject.toml
.github/workflows/: ci.yml
full_project/: main.py
tests/: test_main.py
