[project]
name = "full-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Дмитрий Цепкало",email = "gufisobaka@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
