[tool.poetry]
name = "full-project"
version = "0.1.0"
description = ""
authors = []

packages = [
    { include = "full_project" }
]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
httpx = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
